src/test/ui/macros/syntax-error-recovery.stderr
error: expected one of `(`, `,`, `=`, `{`, or `}`, found `(String)`
  --> $DIR/syntax-error-recovery.rs:7:26
   |
LL |                 $token $($inner)? = $value,
   |                          ^^^^^^ expected one of `(`, `,`, `=`, `{`, or `}`
...
LL | values!(STRING(1) as (String) => cfg(test),);
   | -------------------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `values` (in Nightly builds, run with -Z macro-backtrace for more info)

error: macro expansion ignores token `(String)` and any following
  --> $DIR/syntax-error-recovery.rs:7:26
   |
LL |                 $token $($inner)? = $value,
   |                          ^^^^^^
...
LL | values!(STRING(1) as (String) => cfg(test),);
   | -------------------------------------------- caused by the macro expansion here
   |
   = note: the usage of `values!` is likely invalid in item context

error: aborting due to 2 previous errors

